--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==0.7.2
 gunicorn==19.3.0
 twilio>=3.3.6
 psycopg2==2.6.1
+Flask==0.10.1
 Flask-SQLAlchemy==2.0
 Flask-Migrate==1.4.0
 Flask-Script==2.0.5
